# lightweight-mcnnm

./: .pre-commit-config.yaml  CHANGELOG.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  version-bump.yml
docs/: conf.py
src/mcnnm/: utils.py  validation.py
